--- a/UI/Components/Cards/NewsCard/NewsCardStyles.axaml
+++ b/UI/Components/Cards/NewsCard/NewsCardStyles.axaml
@@ -2,19 +2,19 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!-- Define styles specifically for this internal button class -->
     <Style Selector="Button.news-card-btn">
-        <Setter Property="Background" Value="#1A1A1A"/>
-        <Setter Property="BorderBrush" Value="#2A2A2A"/>
+        <Setter Property="Background" Value="#66090909"/>
+        <Setter Property="BorderBrush" Value="#15FFFFFF"/>
         <Setter Property="BorderThickness" Value="1"/>
-        <Setter Property="CornerRadius" Value="10"/>
+        <Setter Property="CornerRadius" Value="12"/>
         <Setter Property="Padding" Value="10"/>
     </Style>
     
     <Style Selector="Button.news-card-btn:pointerover">
-         <Setter Property="Background" Value="#252525"/>
-         <Setter Property="BorderBrush" Value="#3A3A3A"/>
+         <Setter Property="Background" Value="#80090909"/>
+         <Setter Property="BorderBrush" Value="#20FFFFFF"/>
     </Style>
     
     <Style Selector="Button.news-card-btn:pressed">
-         <Setter Property="Background" Value="#151515"/>
+         <Setter Property="Background" Value="#8C090909"/>
     </Style>
 </Styles>
