--- a/UI/Components/Dashboard/GameControlBar/GameControlBarStyles.axaml
+++ b/UI/Components/Dashboard/GameControlBar/GameControlBarStyles.axaml
@@ -1,11 +1,11 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style Selector="Button.VersionAreaButton">
-        <Setter Property="Background" Value="#2a2a2a"/>
-        <Setter Property="BorderBrush" Value="#333333"/>
+        <Setter Property="Background" Value="#66090909"/>
+        <Setter Property="BorderBrush" Value="#15FFFFFF"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="Padding" Value="24,0"/>
-        <Setter Property="CornerRadius" Value="10,0,0,10"/>
+        <Setter Property="CornerRadius" Value="12,0,0,12"/>
         <Setter Property="Height" Value="50"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -26,24 +26,20 @@
         </Setter>
     </Style>
     <Style Selector="Button.VersionAreaButton /template/ Border">
-        <Setter Property="RenderTransform" Value="scale(1)"/>
         <Setter Property="Transitions">
             <Transitions>
                 <BrushTransition Property="Background" Duration="0:0:0.15"/>
                 <DoubleTransition Property="Opacity" Duration="0:0:0.15"/>
-                <TransformOperationsTransition Property="RenderTransform" Duration="0:0:0.15"/>
             </Transitions>
         </Setter>
     </Style>
     <Style Selector="Button.VersionAreaButton:pointerover /template/ Border">
-        <Setter Property="Background" Value="#333333"/>
+        <Setter Property="Background" Value="#80090909"/>
         <Setter Property="Opacity" Value="0.9"/>
-        <Setter Property="RenderTransform" Value="scale(0.97)"/>
     </Style>
     <Style Selector="Button.VersionAreaButton:pressed /template/ Border">
-        <Setter Property="Background" Value="#252525"/>
+        <Setter Property="Background" Value="#8C090909"/>
         <Setter Property="Opacity" Value="0.85"/>
-        <Setter Property="RenderTransform" Value="scale(0.95)"/>
     </Style>
     <Style Selector="Button.VersionAreaButton TextBlock">
         <Setter Property="Foreground" Value="#ddd"/>
