--- a/UI/Components/Inputs/ActionInput/ActionInput.axaml
+++ b/UI/Components/Inputs/ActionInput/ActionInput.axaml
@@ -15,10 +15,10 @@
                    IsVisible="{Binding ElementName=Root, Path=Label, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"/>
         
         <!-- Input Container -->
-        <Border Background="#252525" 
-                CornerRadius="8" 
+        <Border Background="#0DFFFFFF" 
+                CornerRadius="10" 
                 Padding="8"
-                BorderBrush="#333"
+                BorderBrush="#0DFFFFFF"
                 BorderThickness="1">
             <Grid ColumnDefinitions="*, Auto" ColumnSpacing="8">
                 
